<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <TextView
        android:id="@+id/lblIdPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_id_pagos"
        android:textSize="18sp"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/titleSoles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSoles"
        android:textSize="18sp"
      android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingStart="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblIdPago"
        />

    <TextView
        android:id="@+id/lblMontoPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_monto_pago_list"
        android:textSize="18sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingEnd="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleSoles"
        />
    <TextView
        android:id="@+id/lblFechaPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fecha_pago_list"
        android:textSize="18sp"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblMontoPago"
        />
    <TextView
        android:id="@+id/lblEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_estado_pago_list"
        android:textSize="18sp"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/lblFechaPago"
        />






</androidx.constraintlayout.widget.ConstraintLayout>