<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/lblTitleListadoContratos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_title_listado_contratos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="26sp"
        android:layout_marginTop="5sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/lyArriba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitleListadoContratos">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="52dp"
            android:layout_weight="0.3"
            />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_buscar"
            android:layout_weight="0.7"
            android:inputType="text" />


    </LinearLayout>

    <Spinner
        android:id="@+id/lblEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_estado"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyArriba"/>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblEstado"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerContratos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBuscar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25sp"
        android:layout_marginEnd="25sp"
        app:srcCompat="@android:drawable/ic_input_add"

        />


</androidx.constraintlayout.widget.ConstraintLayout>